--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "private": true,
   "dependencies": {
+    "@ag-grid-community/angular": "^32.1.0",
+    "@ag-grid-community/client-side-row-model": "^32.1.0",
+    "@ag-grid-enterprise/column-tool-panel": "^32.1.0",
+    "@ag-grid-enterprise/filter-tool-panel": "^32.1.0",
     "@angular/animations": "^18.2.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
@@ -18,6 +22,10 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@syncfusion/ej2-angular-grids": "^26.2.11",
+    "@syncfusion/ej2-angular-popups": "^26.2.11",
+    "ag-grid-angular": "^32.1.0",
+    "ag-grid-community": "^32.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -27,6 +35,7 @@
     "@angular/cli": "^18.2.1",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.17.7",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
