--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,8 @@
               }
             ],
             "styles": [
+              
+              "node_modules/devextreme/dist/css/dx.light.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -37,7 +39,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumError": "10MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -57,6 +59,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+      "proxyConfig": "src/proxy.conf.json"
+    },
           "configurations": {
             "production": {
               "buildTarget": "rowgrid:build:production"
@@ -85,9 +90,11 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "node_modules/@syncfusion/ej2-angular-grids/styles/material.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [  "node_modules/devextreme/dist/js/dx.all.js"]
           }
         }
       }
