--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@ag-grid-community/client-side-row-model": "^32.1.0",
     "@ag-grid-enterprise/column-tool-panel": "^32.1.0",
     "@ag-grid-enterprise/filter-tool-panel": "^32.1.0",
-    "@angular/animations": "^18.2.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
@@ -22,10 +21,26 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@syncfusion/ej2-angular-base": "*",
     "@syncfusion/ej2-angular-grids": "^26.2.11",
+    "@syncfusion/ej2-angular-inputs": "*",
+    "@syncfusion/ej2-angular-navigations": "^26.2.12",
     "@syncfusion/ej2-angular-popups": "^26.2.11",
+    "@syncfusion/ej2-base": "*",
+    "@syncfusion/ej2-buttons": "*",
+    "@syncfusion/ej2-inputs": "*",
     "ag-grid-angular": "^32.1.0",
     "ag-grid-community": "^32.1.0",
+    "angular-font-awesome": "^3.1.2",
+    "devextreme": "^24.1.5",
+    "devextreme-angular": "^24.1.5",
+    "express": "^4.21.0",
+    "express-http-proxy": "^2.1.1",
+    "fortawesome": "^0.0.1-security",
+    "http-proxy-middleware": "^3.0.2",
+    "request": "^2.88.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
